# bevy_despawn_particles

./: .gitignore  Cargo.toml  README.md
examples/: base.rs  curves.rs  fade.rs  max_particles.rs  mesh.rs  mesh_override.rs  preset.rs  shrink.rs  sizing.rs  sprite.rs  tas.rs  the_works.rs  the_works_simple.rs  velocity.rs
src/: components.rs  despawn.rs  despawn_material.wgsl  events.rs  lib.rs  phys.rs  resources.rs  systems.rs  utils.rs
