[package]
name = "bevy_despawn_particles"
version = "0.1.0-pre.1"
edition = "2021"
license = "Unlicense"
keywords = ["gamedev", "graphics", "bevy", "bevy_plugin"]
categories = ["game-development"]
authors = ["bilowik"]
description = "An event-based plugin for Bevy to spawn particles on despawn that are built from the original texture"
repository = "https://github.com/bilowik/bevy_despawn_particles"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rand = "0.8.5"
bevy_rapier2d = { version = "0.21.0", optional = true }
bevy_variable_property = "0.1.0-pre.2"
smallvec = { version = "1.11.0", features = ["const_generics"] }
thiserror = "1.0.43"

[features]
bevy_rapier2d = ["dep:bevy_rapier2d"]
